# Coogle

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.c  flow.md
.github/workflows/: ci.yml
benchmarks/: benchmark_boost.sh  benchmark_llvm.sh  benchmark_self.sh
include/coogle/: arena.h  clang_raii.h  colors.h  includes.h  parser.h
src/: clang_raii.h  includes.cpp  main.cpp  parser.cpp  parser.h
test/inputs/: example.c  type_alias_test.cpp
test/unit/: containers_test.cpp  matching_test.cpp  normalize_test.cpp  parser_test.cpp  signature_test.cpp  test_main.cpp  type_alias_test.cpp
